--- a/src/App.css
+++ b/src/App.css
@@ -24,118 +24,16 @@
   color: white;
 }
 
-.Teams {
-  height: 100%;
-  margin-left: 0;
-  padding-left: 0;
-}
-
-.Teamtag {
-  border-bottom: 3px solid rgb(54, 54, 54);
-  margin-bottom: 20px;
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.Teamhead.row {
-  padding-left: auto;
-  padding-right: auto;
-  border-bottom: 3px solid rgb(54, 54, 54);
-  font-size: 60px;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-}
-
-.Feed {
-  border-left: 3px solid rgb(54, 54, 54);
-  border-right: 3px solid rgb(54, 54, 54);
-  display: block;
-  justify-content: center;
-  align-content: center;
-}
-
-.Schedule {
-  padding-top: 1rem;
-  border-right: 3px solid rgb(54, 54, 54);
-  border-bottom: 3px solid rgb(54, 54, 54);
-  height: 65vh;
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.modal-background {
-  background-color: green;
-}
-
-.drop {
-  color: black;
-  padding-left: 25px;
-  padding-right: 100px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-}
-
-.drop:hover {
-  background-color: rgb(230, 230, 230);
-  text-decoration: none;
-  color: black;
-}
-
-button.btn.btn-custom {
-  font-size: 40px;
-  font-weight: bold;
-  background-color: #3a3b3c;
-  border-color: #3a3b3c;
-  color: white;
-}
-
-button.btn.btn-custom:hover {
-  background-color: rgb(82, 82, 82);
-}
-
-.News {
-  font-size: 40px;
-  font-weight: 800;
-}
-
-.Badge {
-  margin-top: 0rem;
-  width: 100%;
-  text-align: right;
-  font-size: 40px;
-  font-weight: 700;
-}
-
-.Roster {
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.container-fluid {
-  margin-top: 120px;
-}
-
-.card {
-  margin-right: 3rem;
-  font-size: 25px;
-  font-weight: 400;
-  color: white;
-}
-
-.col{
-  display: flex;
-  align-content: center;
-  justify-content: center;
-}
-
-.Post {
-  color: white;
-  margin-left: 15rem;
-}
-
 .App-link {
-  color: #61dafb;
+  color: #ffffff;
+}
+
+.navbar {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background-color: #3a3b3c;
+  color: white;
 }
 
 @keyframes App-logo-spin {
